fixed stuck questions

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -11,6 +11,7 @@ $question-font: 'Ubuntu', sans-serif;
   margin: 0;
   padding: 0;
   -webkit-tap-highlight-color: transparent;
+  user-select: none;
   ::selection {
     background-color: black;
   }
@@ -327,6 +328,7 @@ body {
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   margin: 5px;
   width: 100%;
   min-height: 8vh;
@@ -338,10 +340,6 @@ body {
   &:hover {
     cursor: pointer;
     background-color: #F56E5C;
-  }
-  .answer-text {
-    text-align: center;
-    margin: 0 auto;
   }
 }
 
